syntax = "proto3";

package tiberious.v1;
option go_package = "v1";

import "github.com/golang/protobuf/ptypes/timestamp/timestamp.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

// Tiberious defines the gRPC state of Tiberious.
service Tiberious {
    // StartStream starts a bi-directional stream.
    rpc StartStream(stream StreamMessage) returns (stream StreamMessage) {}
    // NewConversation starts a new conversation.
    rpc NewConversation(NewConversationRequest) returns (Conversation) {}
}

// Meta provides the meta data for Tiberious messages.
message Meta {
    google.protobuf.Timestamp created = 1;
}

// ClientMessage is a message sent from a client to a server, this may
// contain information for the server or another client.
message ClientMessage {
    Meta meta = 1;

    int64 conversation_id = 10;
    bytes data = 11;
}

// ServerMessage is a message sent from a server to a client, this will
// contain information from the server for the client.
message ServerMessage {
    Meta meta = 1;

    string data = 10;
}

// StreamMessage wraps all the valid types that may be passed over a
// Tiberious gRPC stream.
message StreamMessage {
    oneof stream_message {
        ServerMessage server_message = 10;
        ClientMessage client_message = 11;
    }
}

// NewConversationRequest is a requet to start a new Conversation.
message NewConversationRequest {
    Meta meta = 1;

    // participants should be obfuscated, either using a temporary ID
    // or similar...
    repeated string participants = 10;
}

// Conversation represents a Tiberious conversation.
message Conversation {
    int64 id = 1;
    google.protobuf.Timestamp created = 2;
    google.protobuf.Timestamp time_of_last = 3;
}
